fixed the alignment

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -12,6 +12,30 @@ img {
   font-weight: 900;
 }
 
+.container
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.items
+{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.content
+{
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  align-items: center;
+  text-align: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
